AJ-1009 create snapshot ref on import