@@ -1,10 +1,13 @@
 package org.databiosphere.workspacedataservice.datarepo;
 
 import bio.terra.datarepo.client.ApiException;
+import bio.terra.datarepo.model.SnapshotModel;
+import bio.terra.datarepo.model.SnapshotRetrieveIncludeModel;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
 import java.util.Collections;
+import java.util.List;
 import java.util.UUID;
 
 public class DataRepoDao {
@@ -17,20 +20,12 @@ public class DataRepoDao {
         this.dataRepoClientFactory = dataRepoClientFactory;
     }
 
-    public boolean hasSnapshotPermission(UUID snapshotId) throws ApiException {
-        LOGGER.debug("Checking for permission for snapshot {} ...", snapshotId);
+    public SnapshotModel getSnapshot(UUID snapshotId) {
+        LOGGER.debug("Getting snapshot {}", snapshotId);
         try {
-            dataRepoClientFactory.getRepositoryApi().retrieveSnapshot(snapshotId, Collections.emptyList());
-            //If we get no error, then the user has permission
-            return true;
-        } catch (ApiException e){
-            LOGGER.error(e.getMessage());
-            if (e.getCode() == 401 || e.getCode() == 403)
-                return false;
-            else {
-                throw e;
-            }
+            return dataRepoClientFactory.getRepositoryApi().retrieveSnapshot(snapshotId, List.of(SnapshotRetrieveIncludeModel.NONE));
+        } catch (ApiException e) {
+            throw new DataRepoException(e);
         }
     }
-
 }
